# v4l2_prj

./: README.md
v4l2-capture/: CMakeLists.txt
v4l2-capture/src/: v4l2_MJPG_to_RGB.c  v4l2_YUYV_to_RGB.c
v4l2-encode/: CMakeLists.txt
v4l2-encode/include/: x264_config.h
v4l2-encode/src/: v4l2-encode.c
v4l2-h264-encode-rtp/: CMakeLists.txt
v4l2-h264-encode-rtp/src/: h264_encode.cpp  h264_encode.h  log.h  main.cpp  rtp.cpp  rtp.h  rtsp.cpp  rtsp.h  socket.cpp  socket.h  v4l2_capture.cpp  v4l2_capture.h  yuyv_to_i420.cpp  yuyv_to_i420.h
